compiler-core/src/parse/snapshots/gleam_core__parse__tests__target_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype Wibble {\n    @target(erlang)\n    Wibble2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
    @target(erlang)
    Wibble2
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     @target(erlang)
  │     ^^^^^^^^^^^^^^^ This attribute cannot be used on a variant.

Hint: Did you mean `@deprecated`?
