compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_record_constructor.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type User {\n    name: String,\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type User {
    name: String,
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     name: String,
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

pub type User {
  User(
    name: String,
  )
}
